--- a/gaia/external-apps/catfeeder/index.html
+++ b/gaia/external-apps/catfeeder/index.html
@@ -61,6 +61,24 @@
             <button id="search">search</button>
         </div>
     </div>
+    <div id='container'>
+
+      <div id='videos'>
+        <video id='localVideo' autoplay muted></video>
+        <video id='remoteVideo' autoplay></video>
+      </div>
+
+      <div id='textareas'>
+        <textarea id="dataChannelSend" disabled placeholder="Press Start, enter some text, then press Send."></textarea>
+        <textarea id="dataChannelReceive" disabled></textarea>
+      </div>
+
+      <button id="sendButton" disabled>Send</button>
+
+    </div>
+
+</div>
+
 </body>
 <script src="jquery/jquery-1.9.1.js"></script>
 <script src="jquery/jquery.mobile-1.4.3.js"></script>
@@ -68,4 +86,9 @@
 <script src="js/lib/dialog.js"></script>
 <script src="js/lib/loger.js"></script>
 <script src="js/ble_demo.js"></script>
+<script src='js/lib/socket.io.js'></script>
+<script src='js/lib/adapter.js'></script>
+<script src='js/rtc.js'></script>
+<script src='js/main.js'></script>
+
 </html>
